--- a/movie-app/Modules/Movie-Details/MovieDetailsStoryboard.storyboard
+++ b/movie-app/Modules/Movie-Details/MovieDetailsStoryboard.storyboard
@@ -228,7 +228,7 @@
                         <outlet property="voteLabel" destination="jZr-2C-9BP" id="Uyk-2r-XsQ"/>
                         <outlet property="voteView" destination="aro-6M-C4N" id="Q4l-cQ-lkj"/>
                         <outlet property="yearLabel" destination="AfN-fb-ytP" id="BAn-nt-BHw"/>
-                        <segue destination="yvu-od-44f" kind="presentation" identifier="showPersonDetail" id="rHu-Ut-wGv"/>
+                        <segue destination="0ka-9y-dzA" kind="presentation" identifier="showPersonDetail" modalPresentationStyle="currentContext" id="GHP-zD-EX0"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tRV-HR-vj5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -236,14 +236,14 @@
             <point key="canvasLocation" x="851" y="117"/>
         </scene>
         <!--PersonDetailsStoryboard-->
-        <scene sceneID="b6X-vw-Fko">
+        <scene sceneID="dce-iw-WP4">
             <objects>
-                <viewControllerPlaceholder storyboardName="PersonDetailsStoryboard" id="yvu-od-44f" sceneMemberID="viewController">
-                    <navigationItem key="navigationItem" id="SA5-XX-Q0x"/>
+                <viewControllerPlaceholder storyboardName="PersonDetailsStoryboard" id="0ka-9y-dzA" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="eMj-gK-nOC"/>
                 </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="sww-08-eFR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="m0Z-u3-vxW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1923" y="135"/>
+            <point key="canvasLocation" x="1696" y="106"/>
         </scene>
     </scenes>
     <resources>
