--- a/movie-app/Modules/Search/cells/ResultItemTableViewCell.xib
+++ b/movie-app/Modules/Search/cells/ResultItemTableViewCell.xib
@@ -23,44 +23,51 @@
                             <constraint firstAttribute="width" constant="150" id="fTf-9S-6Vl"/>
                         </constraints>
                     </imageView>
-                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="QYC-jo-xAj">
-                        <rect key="frame" x="176" y="20" width="208" height="220"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="LfG-Cf-ggt">
+                        <rect key="frame" x="176" y="0.0" width="204" height="200"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Titulo" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4mf-BU-Q7K">
-                                <rect key="frame" x="0.0" y="0.0" width="208" height="57"/>
+                                <rect key="frame" x="0.0" y="0.0" width="204" height="100"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Vote" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GS8-JZ-7Nx">
-                                <rect key="frame" x="0.0" y="57" width="208" height="54.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Genre" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E72-FA-srv">
-                                <rect key="frame" x="0.0" y="111.5" width="208" height="54"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Year" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yi2-IN-VEn">
-                                <rect key="frame" x="0.0" y="165.5" width="208" height="54.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="QYC-jo-xAj">
+                                <rect key="frame" x="0.0" y="100" width="204" height="100"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Vote" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GS8-JZ-7Nx">
+                                        <rect key="frame" x="0.0" y="0.0" width="204" height="33.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Genre" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E72-FA-srv">
+                                        <rect key="frame" x="0.0" y="33.5" width="204" height="33"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Year" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yi2-IN-VEn">
+                                        <rect key="frame" x="0.0" y="66.5" width="204" height="33.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
                         </subviews>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="200" id="qFB-oM-5gC"/>
+                        </constraints>
                     </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="QYC-jo-xAj" firstAttribute="leading" secondItem="wKT-uY-f7S" secondAttribute="trailing" constant="10" id="35l-Be-ldk"/>
-                    <constraint firstItem="wKT-uY-f7S" firstAttribute="bottom" secondItem="QYC-jo-xAj" secondAttribute="bottom" id="6fn-EW-aKp"/>
+                    <constraint firstItem="LfG-Cf-ggt" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="2yQ-aE-0s4"/>
+                    <constraint firstAttribute="trailing" secondItem="LfG-Cf-ggt" secondAttribute="trailing" constant="20" id="4d4-5d-lee"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="wKT-uY-f7S" secondAttribute="bottom" constant="9" id="DKg-OX-P0i"/>
                     <constraint firstItem="wKT-uY-f7S" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="ET1-Jk-8v5"/>
-                    <constraint firstAttribute="bottom" secondItem="QYC-jo-xAj" secondAttribute="bottom" constant="20" id="Oc5-rc-SMz"/>
-                    <constraint firstItem="QYC-jo-xAj" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="b8k-OP-zac"/>
                     <constraint firstItem="wKT-uY-f7S" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="d05-fU-oYm"/>
-                    <constraint firstAttribute="trailing" secondItem="QYC-jo-xAj" secondAttribute="trailing" constant="16" id="rat-bv-RK6"/>
+                    <constraint firstItem="LfG-Cf-ggt" firstAttribute="leading" secondItem="wKT-uY-f7S" secondAttribute="trailing" constant="10" id="wAm-ri-eZ4"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
